<resources>
    <string name="app_name">MyDoctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="e_mail_hint">E-mail</string>
    <string name="pass_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create_account_btn">Create account</string>
    <string name="register_btn_login_screen">Dont have an account? <b>Register</b></string>
    <string name="dummy_doc_name">Dr. Doctor Doctoropoulos</string>
    <string name="dummy_doc_category">Dermatologist</string>
    <string name="dummy_doc_hospital">Geniko Nosokomeio Athinon, GNA</string>
    <string name="dummy_doc_patients_counter">100+</string>
    <string name="doc_experience">Experience</string>
    <string name="doc_patient">Patients</string>
    <string name="dummy_doc_years_experience">5+ Years</string>
    <string name="doc_reviews">Reviews</string>
    <string name="dummy_doc_reviews_counter">4.6</string>
    <string name="working_hours">Working Hours</string>
    <string name="working_hours_dummy">Mon-Friday from 9:00 to 18:00</string>
    <string name="get_an_appointment">Get an appointment</string>

    <!-- Onboarding Screen -->
    <string name="onboarding_header_one">Search for a doctor</string>
    <string name="onboarding_desc_one">Search for doctors by name from our search screen. Your latest searches will be shown there.</string>
    <string name="onboarding_header_two">Search doctors by category</string>
    <string name="onboarding_desc_two">Looking for a specific doctor category? We have got you covered! Just go to all categories and find what you are looking for.</string>
    <string name="onboarding_header_three">Add a doctor appointment</string>
    <string name="onboarding_desc_three">Once you have found your doctor, you are able to add an appointment to your list.</string>

    <!-- Doctor Categories -->
    <string name="pathologos">Παθολόγος</string>
    <string name="dermatologos">Δερματολόγος</string>
    <string name="ofthalmiatros">Οφθαλμίατρος</string>
    <string name="orthopedikos">Ορθοπεδικός</string>
    <string name="kardiologos">Καρδιολόγος</string>
    <string name="wrl">Ω.Ρ.Λ.</string>
    <string name="xeirourgos">Χειρούργος</string>
    <string name="neurologos">Νευρολόγος</string>

    <!-- Overview -->
    <string name="doctors_category">Ειδικότητες</string>
    <string name="doctors_header">Γιατροί</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_appointments">Appointments</string>
    <string name="nav_doctors">Doctors</string>
    <string name="my_doctor">My Doctor</string>
    <string name="login_btn">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>

    <!-- Appointment Details Screen -->
    <string name="popup_title">Appointment Cancellation</string>
    <string name="popup_desc">Are you sure that you want to cancel your appointment?</string>
    <string name="popup_positive_btn">Yes</string>
    <string name="popup_negative_btn">No</string>

    <!-- Profile Screen -->
    <string name="profile_screen_email">Email</string>
    <string name="profile_screen_telephone">Telephone</string>
    <string name="profile_screen_location">Location</string>

    <!-- Doctors Details -->
    <string name="doc_name">Δρ. Γιάννης Πουλόπουλος</string>
    <string name="doc_category">Δερματολόγος</string>

    <!-- Overview Screen -->
    <string name="overvie_promo_header">This is a header</string>

    <!-- Appointment Details Screen -->
    <string name="date_time">Date &amp; Time</string>
    <string name="location">Location</string>
    <string name="type_of_visit">Type of visit</string>
    <string name="estimated_cost">Estimated Cost</string>

    <!-- Reschedule Screen -->
    <string name="doc_results_header">No Doctors Available</string>
    <string name="doc_results_desc">We couldn\'t find doctor results for this category. Once we got results, they will appear here.</string>

    <!-- Appointment Details -->
    <string name="reschedule">Αλλαγή Ραντεβού</string>
    <string name="cancel">Ακύρωση</string>
    <string name="details_header">Λεπτομέριες</string>
    <string name="save_appointment">Αποθήκευση Ραντεβού</string>
    <string name="appointment_location">Τοποθεσία Ραντεβού</string>
    <string name="appointment_date">Ημερομηνία Ραντεβού</string>
    <string name="appointment_date_value">27/07/2021</string>
    <string name="appointment_location_value">Αθήνα, Ελλάδα</string>
    <string name="appointment_time">Ώρα Ραντεβού</string>
    <string name="appointment_time_value">20:00</string>
    <string name="appointment_reason">Λόγος Επίσκεψης</string>
    <string name="dialog_empty_desc">We couldn\'t find something for this query.\n Please try again</string>
    <string name="hello_user">Hello User!</string>
    <string name="looking_for_your_next_appointment">Looking for your next appointment?</string>
    <string name="all_categories">All Categories</string>
    <string name="search_hint">Search for a doctor</string>
    <string name="select_your_appointment_s_date">Select your appointment\'s date</string>
    <string name="select_your_appointment_s_time">Select your appointment\'s time</string>
    <string name="describe_your_visit_s_reason">Describe your visit\'s reason</string>
    <string name="appointment_save_btn">Αποθήκευση Ραντεβού</string>
    <string name="log_out">Log out</string>
    <string name="dummy_username">Stathis Karadimitriou</string>
    <string name="save_changes">Αποθήκευση Αλλαγών</string>
    <string name="dialog_open_camera">Τραβήξτε μια φωτογραφία με την Κάμερα</string>
    <string name="dialog_open_gallery">Ανέβασμα απο την Συλλογή φωτογραφιών</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <string name="forgot_pass_btn">Send E-mail</string>

    <string name="time_header">Select Appointment time</string>
    <string name="time_prefix">&gt;&gt;</string>
    <string name="time_suffix">&lt;&lt;</string>

    <string name="forgot_pass_email_sent">An e-mail has been sent to the above address.</string>
    <string name="login_error_occured">An error occured. Please try again.</string>
    <string name="pass_dont_match">Passwords don\'t match</string>
    <string name="pass_input_failed">Your password should contain a capital letter, a number, a special character and must be longer than 6 characters</string>


</resources>