<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:padding="@dimen/dimen_20"
    android:id="@+id/forgot_pass_screen"
    tools:context=".features.forgotpassword.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="@dimen/image_85"
        android:layout_height="@dimen/image_85"
        android:layout_marginTop="@dimen/dimen_30"
        android:contentDescription="@string/app_name"
        android:background="@drawable/ic_stethoscope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_doctor"
        style="@style/text_h2_dark"
        android:padding="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:hint="@string/e_mail_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_activation_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_btn_height"
        android:layout_marginTop="@dimen/dimen_30"
        android:backgroundTint="@color/ocean_blue"
        android:text="@string/forgot_pass_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailField" />

</androidx.constraintlayout.widget.ConstraintLayout>