<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/round_corners_top"
    android:layout_height="match_parent">

    <View
        android:id="@+id/dialogClose"
        android:background="@drawable/round_corners_top"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"/>

    <ImageButton
        android:id="@+id/closeDialog"
        android:layout_width="@dimen/dimen_40"
        android:background="@color/light_grey"
        android:src="@drawable/ic_arrow_right"
        android:rotation="90"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="@id/dialogClose"
        app:layout_constraintEnd_toEndOf="@id/dialogClose"
        app:layout_constraintTop_toTopOf="@id/dialogClose"
        app:layout_constraintBottom_toBottomOf="@id/dialogClose"
        android:layout_height="@dimen/dimen_40"/>

    <TextView
        android:id="@+id/uploadFromCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/upload_dialog_options"
        android:text="@string/dialog_open_camera"
        android:drawableStart="@drawable/ic_camera"
        app:layout_constraintTop_toBottomOf="@id/dialogClose" />

    <TextView
        android:id="@+id/uploadFromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/upload_dialog_options"
        android:text="@string/dialog_open_gallery"
        android:drawableStart="@drawable/ic_gallery"
        app:layout_constraintTop_toBottomOf="@+id/uploadFromCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>