<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".features.login.LoginActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="@dimen/image_85"
        android:layout_height="@dimen/image_85"
        android:layout_marginTop="@dimen/dimen_30"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="My Doctor"
        android:padding="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_img" />

    <EditText
        android:id="@+id/email_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:backgroundTint="@color/navy_blue"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/login_app_name" />

    <EditText
        android:id="@+id/pass_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:backgroundTint="@color/navy_blue"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/email_input_field" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/dimen_30"
        android:backgroundTint="@color/navy_blue"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_input_field" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:text="Forgot your password?"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/register_btn_login_screen"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>